[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "print_display"
path = "src/print_display.rs"

# [[bin]]
# name = "panictest"
# path = "src/panictest.rs"

# [[bin]]
# name = "echoserver"
# path = "src/echoserver.rs"

# [[bin]]
# name = "hello_world"
# path = "src/hello_world.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
